style fix body overflow-y

--- a/itracker-web/src/main/webapp/themes/defaulttheme/includes/styles.css
+++ b/itracker-web/src/main/webapp/themes/defaulttheme/includes/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
     font-size: 8pt;
     background: #fff;
+    overflow-y: scroll;
 }
 
 .smallbody {
